@@ -290,5 +290,5 @@ TABLE.box TD {
 
 #userdata		{cursor: text;font-family:Arial,Helvetica,sans-serif;text-align:left;font-size:9pt;color:#000000;border-width:1pt;background-color:#ffffff;border-color:#CCCCCC;border-style:solid;}
 
-.syntaxHighlight{width: 100%; height: 200px; background-color: white;}
+.syntaxHighlight{width: 99%; height: 200px; background-color: white;}
 .imagefilesFrame { width: 600px; height: 250px; margin: 0px; border: 0px; padding-right: 0px; background-color: White; }
